--- a/_posts/2020-09-25-31.md
+++ b/_posts/2020-09-25-31.md
@@ -15,7 +15,11 @@ Kolejny odcinek o mikroserwisach albo… …patologii w mikroserwisach, a tym ra
 
 Ciekawe linki i inne znaleziska z tego odcinka:
 
-- [Setting SLOs: a step-by-step guide](https://cloud.google.com/blog/products/management-tools/practical-guide-to-setting-slos)
-- [MetricsDB: TimeSeries Database for storing metrics at Twitter](https://blog.twitter.com/engineering/en_us/topics/infrastructure/2019/metricsdb.html)
+- [OpenAI API](https://openai.com/blog/openai-api/)
+- [OpenAI’s new text generator writes sad poems and corrects lousy grammar](https://thenextweb.com/neural/2020/05/29/openais-new-text-generator-writes-sad-poems-and-corrects-lousy-grammar/)
+- [GPT-3 i JSX](https://twitter.com/sharifshameem/status/1282676454690451457)
+- [GPT i Figma](https://twitter.com/jsngr/status/1284511080715362304)
+- [Byte Down: Making Netflix’s Data Infrastructure Cost-Effective](https://netflixtechblog.com/byte-down-making-netflixs-data-infrastructure-cost-effective-fee7b3235032)
+- [Introducing Domain-Oriented Microservice Architecture](https://eng.uber.com/microservice-architecture/)
 
 ### Transkrypcja wkrótce
