--- a/_posts/2020-09-25-31.md
+++ b/_posts/2020-09-25-31.md
@@ -2,7 +2,7 @@
 layout: post
 title: '#31 Patologie Mikroserwisów - Czy rozmiar ma znaczenie?'
 date: 2020-09-25 09:17:00 +0200
-description: ...omijane i nielubiane kontrakty i wersjonowanie
+description: ...czyli temat z dupy
 img: "31"
 tags:
 spreaker: 41113331
