--- a/_posts/2020-09-25-31.md
+++ b/_posts/2020-09-25-31.md
@@ -15,6 +15,7 @@ Kolejny odcinek o mikroserwisach albo… …patologii w mikroserwisach, a tym ra
 
 Ciekawe linki i inne znaleziska z tego odcinka:
 
+- [[Raport] Rynek pracy IT w pierwszej połowie 2020 roku. Zarobki, rodzaje umów i specjalizacje w branży](https://nofluffjobs.com/insights/raport-rynek-pracy-it-w-pierwszej-polowie-2020-roku-zarobki-rodzaje-umow-i-specjalizacje-w-branzy/)
 - [OpenAI API](https://openai.com/blog/openai-api/)
 - [OpenAI’s new text generator writes sad poems and corrects lousy grammar](https://thenextweb.com/neural/2020/05/29/openais-new-text-generator-writes-sad-poems-and-corrects-lousy-grammar/)
 - [GPT-3 i JSX](https://twitter.com/sharifshameem/status/1282676454690451457)
