--- a/_posts/2020-10-16-32.md
+++ b/_posts/2020-10-16-32.md
@@ -18,6 +18,6 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 - [ESXi Arm Edition](https://flings.vmware.com/esxi-arm-edition#video)
 - [Snakes In A Facebook Datacenter](http://highscalability.com/blog/2020/9/22/snakes-in-a-facebook-datacenter.html)
 - [Mother Fucking snakes on a Mother Fucking plane!](https://www.youtube.com/watch?v=PZ2QFmJ7h0A&ab_channel=CaptainwiggIes)
-- [poznajdocker.pl kod PATOARCHITEKCI](https://poznajdocker.pl/)
+- [poznajdocker.pl](https://poznajdocker.pl/) kod: PATOARCHITEKCI
 
 ### Transkrypcja wkrótce
