--- a/_posts/2020-10-16-32.md
+++ b/_posts/2020-10-16-32.md
@@ -2,12 +2,12 @@
 layout: post
 title: '#32 Patologie Mikroserwisów - Dane!!!'
 date: 2020-10-16 10:00:00 +0200
-description: ...czyli bardzo ważnej oczywistości!
+description: ...czyli o bardzo ważnej oczywistości!
 img: "32"
 tags:
 spreaker: 41489845
 ---
-Kolejny odcinek o mikroserwisach albo… …patologii w mikroserwisach, a tym razem o danych... czyli bardzo ważnej oczywistości!
+Kolejny odcinek o mikroserwisach albo… …patologii w mikroserwisach, a tym razem o danych... czyli o bardzo ważnej oczywistości!
 
 - [Facebook](https://www.facebook.com/patoarchitekci/)
 - [UserVoice](https://github.com/patoarchitekci/uservoice/issues)
