--- a/_posts/2021-01-01-35.md
+++ b/_posts/2021-01-01-35.md
@@ -7,7 +7,7 @@ img: "5"
 tags:
 spreaker: 42746812
 ---
-Noworoczny odcinek, gdzie na luzie przechodzimy przez pytania z naszego [UserVoice](https://github.com/patoarchitekci/uservoice/issues)
+Noworoczny odcinek, gdzie na luzie przechodzimy przez pytania z naszego [UserVoice](https://github.com/patoarchitekci/uservoice/issues).
 
 - [Facebook](https://www.facebook.com/patoarchitekci/)
 - [UserVoice](https://github.com/patoarchitekci/uservoice/issues)
