--- a/_posts/2021-01-01-35.md
+++ b/_posts/2021-01-01-35.md
@@ -20,7 +20,7 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 - [Co sądzimy o The Unicorn Project](https://github.com/patoarchitekci/uservoice/issues/1)
 - [Opus magnum w świecie aplikacji](https://github.com/patoarchitekci/uservoice/issues/2)
 - [Azure Service Fabric w 2020](https://github.com/patoarchitekci/uservoice/issues/16)
-- [Transakcyjnosc w systemach rozproszonych](https://github.com/patoarchitekci/uservoice/issues/5)
+- [Transakcyjność w systemach rozproszonych](https://github.com/patoarchitekci/uservoice/issues/5)
 - [Sharding pattern](https://docs.microsoft.com/en-us/azure/architecture/patterns/sharding)
 - [Nowe wersje starych szyn danych - czy to ma sens?](https://github.com/patoarchitekci/uservoice/issues/6)
 - [Tu zadajemy pytania o Data warehousing, data lakes](https://github.com/patoarchitekci/uservoice/issues/17)
