--- a/_posts/2021-01-01-35.md
+++ b/_posts/2021-01-01-35.md
@@ -24,5 +24,6 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 - [Sharding pattern](https://docs.microsoft.com/en-us/azure/architecture/patterns/sharding)
 - [Nowe wersje starych szyn danych - czy to ma sens?](https://github.com/patoarchitekci/uservoice/issues/6)
 - [Tu zadajemy pytania o Data warehousing, data lakes](https://github.com/patoarchitekci/uservoice/issues/17)
+- [a tu opinie/pytania o Low Code/No Code](https://github.com/patoarchitekci/uservoice/issues/14)
 
 ### Transkrypcja wkrótce
