--- a/_posts/2021-01-01-35.md
+++ b/_posts/2021-01-01-35.md
@@ -2,7 +2,7 @@
 layout: post
 title: '#35 Luźno na pytania z UserVoice'
 date: 2021-01-01 12:00:00 +0100
-description: ...i wyjaśnienie o co chodziło z tosterem ;-) ;-)
+description: ...i wyjaśnienie o co chodziło z tosterem ;-)
 img: "35"
 tags:
 spreaker: 42746812
