--- a/_posts/2021-02-26-36.md
+++ b/_posts/2021-02-26-36.md
@@ -23,15 +23,15 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 #### Open source i jego zastosowania
 
-- [Presto > Distributed SQL Query Engine for Big Data (prestodb.io)](https://prestodb.io/)
-- [The Cloud Data Lake Engine for Big Data Queries > Dremio (komercyjna platforma z użyciem Apache Arrow i Iceberg)](https://www.dremio.com/)
-- [Apache Arrow > Apache Arrow](https://arrow.apache.org/)
-- [About - Apache Iceberg](https://iceberg.apache.org/)
-- [dbt (data build tool) - Transform data in your warehouse (getdbt.com)](https://www.getdbt.com/)
+- [Presto - Distributed SQL Query Engine for Big Data](https://prestodb.io/)
+- [The Cloud Data Lake Engine for Big Data Queries - Dremio (komercyjna platforma z użyciem Apache Arrow i Iceberg)](https://www.dremio.com/)
+- [Apache Arrow](https://arrow.apache.org/)
+- [Apache Iceberg](https://iceberg.apache.org/)
+- [dbt (data build tool) - Transform data in your warehouse](https://www.getdbt.com/)
 - [Apache Kafka](http://kafka.apache.org/)
-- [Druid > Interactive Analytics at Scale (apache.org)](https://druid.apache.org/)
-- [Welcome > Superset (apache.org)](https://superset.apache.org/)
-- [Azure Purview for Unified Data Governance > Microsoft Azure (komercyjna usługa Azure z użyciem Apache Atlas)](https://azure.microsoft.com/en-us/services/purview/)
+- [Druid - Interactive Analytics at Scale](https://druid.apache.org/)
+- [Superset (apache.org)](https://superset.apache.org/)
+- [Azure Purview for Unified Data Governance (komercyjna usługa Azure z użyciem Apache Atlas)](https://azure.microsoft.com/en-us/services/purview/)
 - [Apache Atlas – Data Governance and Metadata framework for Hadoop](http://atlas.apache.org/#/)
 
 #### Rozwiązania rozproszonych/akcelerowanych OLAP
