--- a/_posts/2021-02-26-36.md
+++ b/_posts/2021-02-26-36.md
@@ -36,8 +36,8 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 #### Rozwiązania rozproszonych/akcelerowanych OLAP
 
-- [Intelligent Data Cloud > Best Big Data Management Platform (kyligence.io)](https://kyligence.io/)
-- [Kyvos > BI Acceleration Platform > A Cloud and Big Data Analytics Company (kyvosinsights.com)](https://www.kyvosinsights.com/)
-- [AtScale > Cloud OLAP for Enterprise Analytics](https://www.atscale.com/)
+- [kyligence - Intelligent Data Cloud - Best Big Data Management Platform](https://kyligence.io/)
+- [Kyvos - BI Acceleration Platform - A Cloud and Big Data Analytics Company](https://www.kyvosinsights.com/)
+- [AtScale - Cloud OLAP for Enterprise Analytics](https://www.atscale.com/)
 
 ### Transkrypcja wkrótce
