--- a/_posts/2021-02-26-36.md
+++ b/_posts/2021-02-26-36.md
@@ -2,7 +2,7 @@
 layout: post
 title: '#36 O analityce z Pawłem Potasińskim'
 date: 2021-02-26 00:00:00 +0100
-description: ...przechodzimy przez wiele różnych trendów i zagadnien
+description: ...przechodzimy przez wiele różnych trendów i zagadnień
 img: "36"
 tags:
 spreaker: 43641899
